credit and change in p/f

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row justify-content-md-center" id="tips">
             <div class="col-md-10">
                 <h1>Keep on Teaching</h1>
-                <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV, and Monroe Park campuses.</div>
+                <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV and Monroe Park campuses.</div>
                 <!--<!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#keep-on" aria-label="mail this">email a link to this section</a></div>-->
                 <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
                 <div class="col-md-12 alert alert-covid" role="alert" id="alert" aria-atomic="true">
