--- a/students/index.html
+++ b/students/index.html
@@ -27,7 +27,7 @@
           <div class="row justify-content-md-center">
             <div class="col-md-9">
                <h1>Keep on Learning</h1>
-               <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV, and Monroe Park campuses.</div>
+               <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV and Monroe Park campuses.</div>
                <p>Sometimes the unexpected happens. When it does, VCU is prepared to keep on teaching and keep on learning. Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students successfully complete this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, use <a href="#help">these forms</a> to reach out for additional assistance from VCU officials responsible for the area of your request.
                </p>
                 <!--ALERT-->
@@ -196,7 +196,7 @@
                   <div class="card-header" id="acad-advice">
                      <h2 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#advising" aria-expanded="false" aria-controls="advising">
-                            Academic Advising (Withdrawals, Course Registration)
+                            Academic Advising (Withdrawals, Course Registration, Pass/Fail)
                           </button>
                       </h2>
                   </div>
@@ -210,6 +210,7 @@
                             <li>For more information about your degree program and academic advising resources, visit our <a href="https://academicadvising.vcu.edu/">VCU Advising website</a> or your departmental website.</li>
                             <li>The last date to withdraw from Spring 2020 courses is April 30th (this is a date change).  <strong>We urge any student who is considering a course withdrawal to </strong><a href="https://vcu.navigate.eab.com/app/"><strong>schedule an appointment</strong></a><strong> with their advisor PRIOR to withdrawing</strong>.  If you are a student with a registration hold and are unable to withdraw via eServices, you must email <a href="mailto:RAR@vcu.edu">RAR@vcu.edu</a> from your VCU email address with your V# and the course(s) you are requesting to be withdrawn from.</li>
                             <li>Fall 2020 course registration begins on March 31st (this is a date change).  Please review what day you can <a href="https://rar.vcu.edu/registration/dates/">register for classes</a> and try to “meet” (remotely) with your advisor prior to this important date.</li>
+                            <li>Undergraduate and graduate students will have the option to choose between receiving standard letter grades (A-F) or the Pass/Fail grade option for each of their courses this semester.  Students will have until May 15, 2020, to decide which courses, if any, they would like to use the Pass/Fail grade option. This means students will be able to see their final grades for each course before making a decision.</li>
                           </ul>
                       </div>
                   </div>
