--- a/index.html
+++ b/index.html
@@ -778,10 +778,7 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#hardware" aria-label="mail this">email a link to this section</a></div> -->
                 <ul>
                     <li>
-                       <p>VCU is providing a limited number of loaner laptops to assist with online learning that will be available on loan for faculty who do not have a working laptop. These loaners are available on a first-come, first-served basis and are limited in supply. As such, please confirm with your departmental IT support that they do not have a laptop for you to use prior to requesting a loaner laptop. Don't know who your IT support is? Call the IT Support Center at 804-828-2227 or email <a href="mailto:itsc@vcu.edu">itsc@vcu.edu</a> for assistance. </p>
-
-                        <p>The loaners that are being distributed are subject to VCU computing use policies. Upon request, machines will be prepared and shipped to faculty via FedEx to their address (shipments can only be made to domestic addresses within the U.S. contiguous 48 states). Please navigate to <a href="https://go.vcu.edu/loanerlaptop">VCU's laptop loaner page</a> to start the loaner request. </p>
-
+                       <p>Unfortunately the VCU laptop loaner program is no longer available.</p>
                     </li>
                     <li>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM Tech</a> (VCU discounts and payroll deduction) or a reputable retailer. Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote teaching and learning.</li>
                 </ul>
