--- a/students/index.html
+++ b/students/index.html
@@ -32,6 +32,8 @@
                </p>
                 <!--ALERT-->
             <div class="alert alert-covid" role="alert" id="alert" aria-atomic="true">
+                <h2>Update Zoom</h2>
+                <p>Zoom has some important security updates available. Please make sure you are running the most recent version. <a href="https://support.zoom.us/hc/en-us/articles/201362233-Where-Do-I-Download-The-Latest-Version-">See the Zoom site for update directions.</a> </p>
                 <h2>Free Adobe Software</h2>
                 <p>
                   On behalf of the School of the Arts, Technology Services, and VCU Libraries a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
