positive test reporting

--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
                 <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
                 <div class="col-md-12 alert alert-covid" role="alert" id="alert" aria-atomic="true">
                     <h2>Update Zoom</h2>
-                    <p>Zoom has some important security updates available. Please make sure you are running the most recent version. <a href="https://support.zoom.us/hc/en-us/articles/201362233-Where-Do-I-Download-The-Latest-Version-">See the Zoom site for update directions.</a> </p>
+                    <p>
+                        Zoom has some important security updates available. Please make sure you are running the most recent version. <a href="https://support.zoom.us/hc/en-us/articles/201362233-Where-Do-I-Download-The-Latest-Version-">See the Zoom site for update directions.</a> 
+                    </p>
                     <h2>Student Support</h2>
                     <p>
                         Faculty or staff who know of a student needing assistance and who was not able to find an answer from the <a href="https://altlab.vcu.edu/rapid-response/students/">Keep Learning</a> resources are encouraged to submit the form below (You will need to be logged into your VCU Google account.):</p>
                  <a class="btn btn-help" href="https://docs.google.com/forms/d/e/1FAIpQLScpO42w9fDfI3gB51H2eo1AyG8ovyNqwazIz5tGBFN2r38F6A/viewform">Refer a student for additional support</a>
                     </p>
-                    <!-- <h2 id="zoom-update">Zoom Update</h2>
-                    <p>
-                        As of March 18th, all VCU Zoom accounts are being issued as "Licensed." You no longer have to fill out a request ticket: simply log in at <a href="http://vcu.zoom.us/" target="_blank" rel="noopener noreferrer" data-saferedirecturl="https://www.google.com/url?q=http://vcu.zoom.us&amp;source=gmail&amp;ust=1584623381705000&amp;usg=AFQjCNHS_sRzkaD3vyqcXUnzIitIugHWrg">vcu.zoom.us</a> with your eID and VCU password to have an account provisioned.</p>
-                    <p>If you already have a free account, please log in again at the <a href="http://vcu.zoom.us/">portal</a> to be upgraded to "Licensed."</p>
-                    <p><a href="https://docs.google.com/document/d/1j_U5Yube0BWZRreVQf4qgAlZ3wBa2uG3chkKDp643QY/edit">Get more Zoom Pro details here.</a>
-                    </p> -->
+                  
                 </div>
                 <div class="row">
                     <div class="col-md-5">
@@ -728,6 +725,15 @@
                 <h2>Support</h2>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#support" aria-label="mail this">email a link to this section</a></div> -->
             </div>
+             <div class="col-md-8">
+                <h3 id="report">Reporting positive COVID-19 cases</h3>
+                <p>If a VCU student or employee tests positive for COVID-19, please report it directly to University Student Health or Employee Health. University Student Health or Employee Health will ensure that appropriate state and local health care authorities are provided necessary information and that personal privacy considerations are respected. VCU will follow notification procedures recommended by these authorities.</p>
+                <ul>
+                    <li><strong>Students:</strong> Report positive student cases of COVID-19 infection to <a href="https://health.students.vcu.edu/">University Student Health Services</a> at (804) 828-8828.</li>
+                    <li><strong>Employees:</strong> Report positive employee cases of COVID-19 infection to <a href="https://hr.vcu.edu/current-employees/employee-health/">VCU Employee Health</a> at (804) 828-0584.</li>
+                </ul>
+            </div>
+
             <div class="col-md-8">
                 <h3 id="tandl">Teaching and Learning Support</h3>
                 <ul>
