--- a/students/index.html
+++ b/students/index.html
@@ -382,6 +382,26 @@
                   </div>
               </div>
               <!--standards card end-->
+              <!--reporting card-->
+              <div class="card">
+                  <div class="card-header" id="covid-reporting">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#reporting" aria-expanded="false" aria-controls="reporting">
+                            Reporting positive COVID-19 cases
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="reporting" class="collapse" aria-labelledby="covid-reporting" data-parent="#stu-support">
+                      <div class="card-body">
+                         <p>If a VCU student or employee tests positive for COVID-19, please report it directly to University Student Health or Employee Health. University Student Health or Employee Health will ensure that appropriate state and local health care authorities are provided necessary information and that personal privacy considerations are respected. VCU will follow notification procedures recommended by these authorities.</p>
+                      <ul>
+                          <li><strong>Students:</strong> Report positive student cases of COVID-19 infection to <a href="https://health.students.vcu.edu/">University Student Health Services</a> at (804) 828-8828.</li>
+                          <li><strong>Employees:</strong> Report positive employee cases of COVID-19 infection to <a href="https://hr.vcu.edu/current-employees/employee-health/">VCU Employee Health</a> at (804) 828-0584.</li>
+                      </ul>
+                      </div>
+                  </div>
+              </div>
+              <!--reporting card <end-->
               <!--help card-->
             <!--   <div class="card">
                   <div class="card-header" id="help-needed">
