--- a/students/index.html
+++ b/students/index.html
@@ -161,13 +161,13 @@
                   <div class="card-header" id="stu-materials">
                      <h2 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#materials" aria-expanded="false" aria-controls="materials">
-                            Access to Textbooks or Course Materials
+                            Access to Textbooks, Course Materials, and Course Materials
                           </button>
                       </h2>
                   </div>
                   <div id="materials" class="collapse" aria-labelledby="stu-materials" data-parent="#stu-support">
                       <div class="card-body">
-                         <p>Students are encouraged to talk to their instructors about the materials needed to successfully complete their online course. VCU Libraries offer <a href="https://guides.library.vcu.edu/continuity/scanning">scanning services</a> (by faculty request only) as well as the possibility of accessing a book electronically.  Please have your instructor contact the <a href="https://www.library.vcu.edu/covid19/">VCU Library</a> for assistance in setting up these free options for you.</p>
+                         <p>The Libraries provide access to <a href="https://guides.library.vcu.edu/continuity/off-campus" target="_blank" rel="noopener">millions of library resources</a>, and librarians are <a href="https://guides.library.vcu.edu/continuity/research" target="_blank" rel="noopener">available</a> via chat, text, email, and online appointments.Librarians can help you and instructors search for digital access to textbooks and course materials. For help, <a href="https://www.library.vcu.edu/research/askus/" target="_blank" rel="noopener">contact VCU Libraries</a></p>
                       </div>
                   </div>
               </div>
