--- a/students/index.html
+++ b/students/index.html
@@ -159,7 +159,7 @@
                   <div class="card-header" id="stu-materials">
                      <h2 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#materials" aria-expanded="false" aria-controls="materials">
-                            Access to Textbooks, Course Materials, and Course Materials
+                            Access to Textbooks, Course Materials, and Research
                           </button>
                       </h2>
                   </div>
