--- a/index.html
+++ b/index.html
@@ -782,9 +782,7 @@
                 <h3 id="laptops">Laptops:</h3>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#hardware" aria-label="mail this">email a link to this section</a></div> -->
                 <ul>
-                    <li>
-                       <p>Unfortunately the VCU laptop loaner program is no longer available.</p>
-                    </li>
+                    <li>Faculty and students who need a loaner laptop should reach out to the IT Support Center directly by calling 804-828-2227 or via email at itsc@vcu.edu to request a loaner laptop.</li>
                     <li>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM Tech</a> (VCU discounts and payroll deduction) or a reputable retailer. Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote teaching and learning.</li>
                 </ul>
             </div>
