--- a/students/index.html
+++ b/students/index.html
@@ -119,7 +119,7 @@
                   <div id="tech" class="collapse" aria-labelledby="tech-support" data-parent="#stu-support">
                       <div class="card-body">
                           <h3 id="loans">Laptop Loans</h3>
-                            <p>Unfortunately the VCU laptop loaner program is no longer available.</p>
+                            <p>Faculty and students who need a loaner laptop should reach out to the IT Support Center directly by calling 804-828-2227 or via email at itsc@vcu.edu to request a loaner laptop.</p>
 
 
                           <p>For our veterans who need a laptop computer a local veteran support organization,<a href="https://techfortroops.org/"> Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
