--- a/students/index.html
+++ b/students/index.html
@@ -32,13 +32,10 @@
                </p>
                 <!--ALERT-->
             <div class="alert alert-covid" role="alert" id="alert" aria-atomic="true">               
-                <h2>Free Adobe Software</h2>
-                <p>
-                  On behalf of the School of the Arts, Technology Services, and VCU Libraries a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
+                <h2>Reduced Price Adobe Software</h2>
+                <p>Enrolled students can get Adobe Creative Cloud for 3 months for $15.</p>
 
-                  <p>More information is available at <a href="http://adobe.vcu.edu/" target="_blank" rel="noopener" >adobe.vcu.edu</a></p>
-
-                  <p>Students can receive their licenses directly at: <a href="http://vcu.onthehub.com/" target="_blank" rel="noopener">vcu.onthehub.com</a>
+                  <p>Students can purchase their licenses directly at: <a href="http://vcu.onthehub.com/" target="_blank" rel="noopener">vcu.onthehub.com</a>
                 </p>                  
             </div>
             <!--end alert-->
