canvas additions, remove keep learning element etc.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                 </div>
                 
                 <h2>General Information</h2>
-                <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
-                <p><a href="https://covid-19.vcu.edu/">Keep up to date on all COVID-19 communication from VCU.</a></p>
-                <h2 id="kot-form">Keep on Teaching Form</h2>
-                <p>There's still time to submit the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeW1P18lGvM23Q-LdpUrjvuZF7gu8yk42prYQrBuArFSuEVQ/viewform">My Plan to Keep on Teaching form</a>. You will need to be logged into your VCU account to access the form.</p>
-                <p>Please see <a href="https://www.google.com/url?q=https://provost.vcu.edu/virus/forminfo/&sa=D&ust=1584573564351000&usg=AFQjCNFsMKj2KfSCJ65d2VJhld5rfOWArg">this message from the Provost</a> to learn more about the form and what will be done with the responses.</p>
+                <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>               
                 <h2 id="continuity">The Goal = Academic Continuity</h2>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Continuity Resource&body=https://altlab.vcu.edu/rapid-response/#continuity" aria-label="mail this">email a link to this section</a></div> -->
                 <p>This toolkit was developed to provide faculty with options to <strong>keep teaching</strong> and for faculty to consider providing options for students to support them as they <strong>keep learning</strong>. The tips, strategies, tools, and resources below are not intended to be a comprehensive lesson in online course pedagogy. The core purpose is to support faculty with a rapid transition to remote instruction that will promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity. </p>
@@ -79,7 +75,7 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Getting Started Resource&body=https://altlab.vcu.edu/rapid-response/#getting-started" aria-label="mail this">email a link to this section</a></div> -->
                 <ol>
                     <li>Be proactive, create a virtual plan now. The good news is the more we prepare, the better the transition will go.</li>
-                    <li>Remind your students that all communications go through VCU email. We recommend announcing this in every single class meeting and through any virtual communication you have with students (Blackboard, email, etc.).</li>
+                    <li>Remind your students that all communications go through VCU email. We recommend announcing this in every single class meeting and through any virtual communication you have with students (Blackboard/Canvas, email, etc.).</li>
                     <li>Make sure you have a way to contact all of your students (e.g., accurate email address).</li>
                     <li>Take stock of learning goals and stay flexible:
                         <ol type="a">
@@ -180,27 +176,27 @@
         <!--tool blackboard announcements row-->
         <div class="row single-app-row" id="bb-announce">
             <div class="col-md-12">
-                <h3>Blackboard Announcements</h3>
+                <h3>Blackboard/Canvas Announcements</h3>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#bb-announce" aria-label="mail this">email a link to this section</a></div> -->
             </div>
             <div class="col-md-5">
                 <div class="description">
                     <h4>Description</h4>
-                    <p>When you make an announcement in Blackboard, you can also send it as an email to the students in your course. This gives students the benefit of an email alert and a place to reference all announcements they cannot be accidentally deleted or lost. </p>
+                    <p>When you make an announcement in Blackboard/Canvas, you can also send it as an email to the students in your course. This gives students the benefit of an email alert and a place to reference all announcements they cannot be accidentally deleted or lost. </p>
                 </div>
             </div>
             <div class="col-md-4 restrictions">
                 <h4>Details</h4>
                 <ul>
-                    <li>Blackboard takes care of the email list.</li>
-                    <li>Announcements can be created automatically for various Blackboard content types.</li>
+                    <li>Blackboard/Canvas takes care of the email list.</li>
+                    <li>Announcements can be created automatically for various Blackboard/Canvas content types.</li>
                 </ul>
             </div>
             <div class="col-md-3">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/courseorganization-management-/facultyleader/toolscommunications/announcements/">How to make an announcement in Blackboard</a></li>
-                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/courseorganization-management-/facultyleader/toolscommunications/send-email/">How to send email through Blackboard</a></li>
+                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/courseorganization-management-/facultyleader/toolscommunications/announcements/">How to make an announcement in Blackboard</a> and <a href="https://community.canvaslms.com/docs/DOC-10405-415250731">make an annoucement inCanvas</a></li>
+                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/courseorganization-management-/facultyleader/toolscommunications/send-email/">How to send email through Blackboard</a> and <a href="https://community.canvaslms.com/docs/DOC-26276">send an email in Canvas</a>.</li>
                 </ul>
             </div>
         </div>
@@ -281,27 +277,28 @@
         <!--tool bb share row-->
         <div class="row single-app-row" id="bb-share">
             <div class="col-md-12">
-                <h3>Blackboard</h3>
+                <h3>Blackboard/Canvas</h3>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#bb-share" aria-label="mail this">email a link to this section</a></div> -->
             </div>
             <div class="col-md-5">
                 <div class="description">
                     <h4>Description</h4>
-                    <p>Blackboard is the centrally supported learning management system (LMS). Blackboard supports the creation and uploading of various kinds of digital content. It’s highly recommended for large classes and for those familiar with LMSs. </p>
+                    <p>Blackboard and Canvas are the centrally supported learning management systems (LMS) for VCU. They supports the creation and uploading of various kinds of digital content. It’s highly recommended for large classes and for those familiar with LMSs. </p>
                 </div>
             </div>
             <div class="col-md-4 restrictions">
                 <h4>Details</h4>
                 <ul>
-                    <li>All courses are already associated with a Blackboard space</li>
+                    <li>Canvas will be the supported LMS after this year.</li>
                 </ul>
             </div>
             <div class="col-md-3">
                 <h4>Resources</h4>
                 <ul>
                     <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard Support at VCU</a></li>
+                    <li><a href="https://learningsystems.vcu.edu/canvas/">Canvas at VCU</a></li>
                     <li><a href="https://www.linkedin.com/learning/blackboard-essential-training/welcome?u=76209018">Blackboard Essentials Training</a></li>
-                    <li><a href="https://vcu.mediaspace.kaltura.com/channel/Blackboard%2BBasics/65678141">Blackboard Learning Academy</a></li>
+                    <li><a href="https://community.canvaslms.com/docs/DOC-18088-how-do-i-use-the-training-services-portal-as-an-instructor">Online Canvas Training</a></li>
                 </ul>
             </div>
         </div>
@@ -325,7 +322,7 @@
             <div class="col-md-5">
                 <div class="description">
                     <h4>Description</h4>
-                    <p>Google Drive is the VCU-supported file management option outside Blackboard. It can hold content created with Google Apps in addition to any file you choose to upload. It’s a good choice if you need to collaboratively edit, comment on work, or share very large files.</p>
+                    <p>Google Drive is the VCU-supported file management option outside Blackboard/Canvas. It can hold content created with Google Apps in addition to any file you choose to upload. It’s a good choice if you need to collaboratively edit, comment on work, or share very large files.</p>
                 </div>
             </div>
             <div class="col-md-4 restrictions">
@@ -535,7 +532,7 @@
                 <ul>
                     <li>Unlimited storage for faculty</li>
                     <li>Content works well on laptops and phones</li>
-                    <li>Content can be embedded in other systems (like Blackboard)</li>
+                    <li>Content can be embedded in other systems (like Blackboard or Canvas)</li>
                 </ul>
             </div>
             <div class="col-md-3">
@@ -625,15 +622,15 @@
             <div class="col-md-5">
                 <div class="description">
                     <h4>Description</h4>
-                    <p>Students using Respondus are unable to print, copy, visit other websites, access other applications, or close a quiz until it is submitted for grading. Requires Blackboard usage.</p>
+                    <p>Students using Respondus are unable to print, copy, visit other websites, access other applications, or close a quiz until it is submitted for grading. Requires Blackboard or Canvas usage.</p>
                 </div>
             </div>
             <div class="col-md-4 restrictions">
                 <h4>Details</h4>
                 <ul>
                     <li><a href="http://www.respondus.com/lockdown/information.pl?ID=711332782">Students must install the Respondus browser</a></li>
-                    <li>Faculty must activate a Respondus assessment via Blackboard</li>
-                    <li>Blackboard has non-Respondus assessment options as well</li>
+                    <li>Faculty must activate a Respondus assessment via Blackboard or Canvas</li>
+                    <li>Blackboard and Canvas have non-Respondus assessment options as well</li>
                 </ul>
             </div>
             <div class="col-md-3">
@@ -774,7 +771,6 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#stu-academic" aria-label="mail this">email a link to this section</a></div> -->
                 <ul>
                     <li><a href="https://clc.vcu.edu/forms/ditutoring/">Tutoring:</a> Tutoring services will continue to be offered but in a Zoom format. Students will be sent a zoom link by their tutor to join the session. Students will be given information about their sessions via email beforehand.</li>
-                    <li><a href="https://clc.vcu.edu/supplemental-instruction/">Supplemental instruction</a> courses that have supplemental instruction will continue to host sessions as regularly scheduled, but via a Zoom/Adobe Connect platform. More information will be provided to students via their class Blackboard site via an announcement.</li>
                     <li><a href="https://clc.vcu.edu/academic-coaching/">Academic coaching:</a> The Campus Learning Center will continue to provide academic coaching via Zoom. Jumpstart sessions will also be continued via Zoom. Students will be sent a zoom link by their coach to join the session.</li>
                 </ul>
             </div>
@@ -841,7 +837,7 @@
          <!--row ferpa-->
         <div class="col-md-8">
             <h3 id="ferpa">Privacy and FERPA Compliance Online</h3>
-            <p>Expectations for student privacy are the same for online and face-to-face classes. As you explore more tools to interact with and provide feedback to your students, you may wonder if you are maintaining privacy for protected student data. As a general rule, rely on <a href="https://ts.vcu.edu/software-center/">university supported tools</a> and understand that grades and other forms of feedback should be transmitted within a dual authenticated system (like the BlackBoard LMS) to ensure FERPA compliance. As you select tools to mediate instructional activities, consider if a similar level of privacy can be maintained that students would expect in a classroom environment. </p>
+            <p>Expectations for student privacy are the same for online and face-to-face classes. As you explore more tools to interact with and provide feedback to your students, you may wonder if you are maintaining privacy for protected student data. As a general rule, rely on <a href="https://ts.vcu.edu/software-center/">university supported tools</a> and understand that grades and other forms of feedback should be transmitted within a dual authenticated system (like the BlackBoard or Canvas LMS) to ensure FERPA compliance. As you select tools to mediate instructional activities, consider if a similar level of privacy can be maintained that students would expect in a classroom environment. </p>
 
             <p>You can <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/FERPA_Tutorial_2018.pdf">explore FERPA policy and what is protected student information here</a>. </p>
        </div>
