--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
             <div class="col-md-8">
                 <p>In a situation where students are not able to come to campus or go to testing centers the <a href="https://conduct.students.vcu.edu//vcu-honor-system/academic-misconduct-/honor-pledge/">VCU honor pledge</a> becomes of paramount importance. There are no simple solutions if you were planning on most of your assessments being proctored, in-person multiple choice tests. Quizzes and other mechanically graded options could provide formative assessment data with projects or other more individualized work playing a larger role in summative assessments. That is a difficult shift to make and more complex with larger enrollments. </p>
                 <p><a href="https://docs.google.com/document/d/1nvXPBojlRPDuoI2igSoYFZQmMlyssRphn7WV3Uf7Ue8/edit?usp=sharing">Best Practices for Promoting Academic Honesty in Online Exams</a> provides suggestions and guidance to promote a culture of honesty, consider alternate exam designs, prepare students, and plan for exam delivery.</p>
+                <p><a href="https://docs.google.com/document/d/1yMY8WocQG5uugBliodYP2w1PHPX7yWgDVXhWbFdpmF0/edit?usp=sharing">SCHEV has also come out with guidance around proctored exams.</a></p>
             </div>
         </div>
         <!--end ASSESS row-->
