fac support img addition, some other tweaks

--- a/index.html
+++ b/index.html
@@ -52,12 +52,16 @@
                         <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
                         <h2>Instructional Support</h2>                        
                         <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
-                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for support from ALT Lab/Online@VCU.</a>
+                        <p><a href="https://vcu.zoom.us/j/640171317">Open office hours are available Wednesday and Thursday from 12-2PM EDT via Zoom at this link</a>.</p>
+                        <p>
+                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for other support from ALT Lab/Online@VCU.</a></p>
 
                     </div>
                 </div>
                 
                 <h2>General Information</h2>
+                <p>VCU offers a wide variety of support options for faculty. Please see the image below for additional details.</p>
+                <a href="https://uploads.provost.vcu.edu/ctle/facultysupport.pdf"><img src= "imgs/fac_support.jpg" alt="A visual organizer depecting available support options. The link leads to an accessible PDF version." class="img-fluid"></a>
                 <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>               
                 <h2 id="continuity">The Goal = Academic Continuity</h2>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Continuity Resource&body=https://altlab.vcu.edu/rapid-response/#continuity" aria-label="mail this">email a link to this section</a></div> -->
